--- a/dog-api-integration/client/dog.html
+++ b/dog-api-integration/client/dog.html
@@ -23,30 +23,8 @@
 <body>
   <h1>Dog Images</h1>
   <div class="dog-images" id="dog-images"></div>
-
+  <script src="./dog.js"></script>
   <script>
-    // 获取狗狗图片并显示在页面上
-    async function fetchDogImages() {
-      try {
-        const response = await fetch('http://127.0.0.1:3000/dog?limit=2');
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        const images = await response.json();
-        const container = document.getElementById('dog-images');
-        images.forEach(image => {
-          const img = document.createElement('img');
-          img.src = image.url;
-          img.alt = `Dog image ${image.id}`;
-          img.width = image.width / 4; // 根据需要调整宽度
-          img.height = image.height / 4; // 根据需要调整高度
-          container.appendChild(img);
-        });
-      } catch (error) {
-        console.error('Error fetching dog images:', error);
-      }
-    }
-
     // 页面加载完毕后获取图片
     window.onload = fetchDogImages;
   </script>
