--- a/dog-api-integration/client/dog.html
+++ b/dog-api-integration/client/dog.html
@@ -6,27 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dog Images</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      margin-top: 20px;
+    }
+
+    #file-input {
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #file-input:hover {
+      background-color: #45a049;
+    }
+
     .dog-images {
       display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: nowrap; /* 不換行，確保圖片平行排列 */
+      overflow-x: auto; /* 超出範圍的圖片會產生水平滾動條 */
+      width: 100%;
     }
 
     .dog-images img {
       max-width: 200px;
-      height: auto;
-      object-fit: cover;
+      max-height: 200px;
+      object-fit: contain;
+      width: 100%;
     }
+
   </style>
 </head>
 
 <body>
   <h1>Dog Images</h1>
+  <input type="file" id="file-input" accept="image/*" multiple>
   <div class="dog-images" id="dog-images"></div>
   <script src="./dog.js"></script>
   <script>
-    // 页面加载完毕后获取图片
     window.onload = fetchDogImages;
+    document.getElementById('file-input').addEventListener('change', handleFileUpload);
   </script>
 </body>
 
