--- a/dog-api-integration/client/dog.html
+++ b/dog-api-integration/client/dog.html
@@ -38,8 +38,8 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
-      flex-wrap: nowrap; /* 不換行，確保圖片平行排列 */
-      overflow-x: auto; /* 超出範圍的圖片會產生水平滾動條 */
+      flex-wrap: nowrap;
+      overflow-x: auto;
       width: 100%;
     }
 
