--- a/dog-api-integration/client/dog.html
+++ b/dog-api-integration/client/dog.html
@@ -13,25 +13,6 @@
       flex-direction: column;
       align-items: center;
     }
-
-    h1 {
-      margin-top: 20px;
-    }
-
-    #file-input {
-      margin-bottom: 20px;
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    #file-input:hover {
-      background-color: #45a049;
-    }
-
     .dog-images {
       display: flex;
       justify-content: center;
@@ -54,14 +35,8 @@
 
 <body>
   <h1>Dog Images</h1>
-  <input type="file" id="file-input" accept="image/*" multiple>
   <div class="dog-images" id="dog-images"></div>
-  <script src="./dog.js"></script>
-  <script>
-    window.onload = fetchDogImages;
-    document.getElementById('file-input').addEventListener('change', handleFileUpload);
-  </script>
+  <script type="module"src="dog.js"></script>
 </body>
-
 </html>
 
